Authentication with passport

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  form(action="/", method="POST")
+  form(action="/authenticate", method="POST")
     div
       label(for="username") Username:
       input(type="text", name="username", id="username")
