--- a/views/index.pug
+++ b/views/index.pug
@@ -2,14 +2,13 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
-  form(action="/authenticate", method="POST")
+  form(action="/authenticate", method="POST", class="login-form")
     div
-      label(for="username") Username:
+      label(for="username") Username
       input(type="text", name="username", id="username")
 
     div
-      label(for="password") Password:
+      label(for="password") Password
       input(type="password", name="password", id="password")
 
     div
