--- a/views/chat.pug
+++ b/views/chat.pug
@@ -1,13 +1,21 @@
 extends layout
 
 block content
-    h1= title
-    ul(id="messages")
-    form(id="form", action="")
-        input(id="input", autocomplete="off")
-        button() Post
-        
-    script(src="/socket.io/socket.io.js")
-    script.
-        var user = !{JSON.stringify(user)};
-    script(src="javascripts/chat.js")
+    div(class="chat-page")
+        div(class="bar")
+            h3 FSE Chat Room
+            button(style="margin-left:auto;") Logout
+        div(id="messages")
+            div(class="message")
+                h4 Lori 
+                p(class="time") 00.00.0000 00:00AM
+                p message
+        form(id="chat-form", action="")
+            input(id="input")
+            div(class="bar")
+                button(style="margin: auto") Post
+
+        script(src="/socket.io/socket.io.js")
+        script.
+            var user = !{JSON.stringify(user)};
+        script(src="javascripts/chat.js")
