--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,5 @@
 body {
+  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -14,7 +15,7 @@ a {
   position: relative;
   max-width: 300px;
   margin: 0 auto 100px;
-  padding: 50px 15px;
+  padding: 15px;
 }
 
 .login-form input {
